# PBL6

./: .dockerignore  .gitignore  .hadolint.yaml  .lintstagedrc.js  .lintstagedrc.json  README.md  package-lock.json  package.json  pyproject.toml  shell.nix  skaffold.yaml  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: web.yml
.husky/: pre-commit
apps/data_processing/: Dockerfile  processing.py
apps/docs/: next.config.js  package.json  tsconfig.json
apps/docs/src/components/: Header.spec.tsx  Header.tsx
apps/docs/src/pages/: index.tsx
apps/fingerprinter/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/fingerprinter/app/: main.py
apps/fingerprinter/app/dataset/: audio_utils.py  dataset.py  genUnbalSequence.py
apps/fingerprinter/app/generator/: db.py  generate.py
apps/fingerprinter/app/model/: __init__.py  melsprctrogram.py  nnfp.py
apps/fingerprinter/app/server/: app.py  querier.py
apps/fingerprinter/app/trainer/: NTxentLoss.py  experiment_helper.py  lamb_optimizer.py  mini_search_subroutines.py  trainer.py  utils.py
apps/fingerprinter/app/trainer/agumentation_pipeline/: __init__.py  ncutout_tarray.py  specaug_chain.py
apps/fingerprinter/app/utils/: __init__.py  checkpoint.py  config.py  logging_tqdm.py
apps/fingerprinter/docker/: Dockerfile
apps/indexer/: Dockerfile
apps/indexer/app/: app.py  cli.py  config.py  indexer.py  main.py  routes.py  utils.py
apps/mlflow/: Dockerfile  init_minio_bucket.py  main.py  requirements.txt
apps/model/: Dockerfile  reinforce.py  requirements.txt
apps/songs-uploader/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
apps/songs-uploader/app/: app.py  cli.py  config.py  db.py  manage.py  models.py  routes.py  utils.py  wsgi.py
apps/songs-uploader/app/templates/: index.html  songs.html
apps/songs-uploader/migrations/: env.py
apps/songs-uploader/migrations/versions/: dfede456d2c9_.py
apps/web/: .lintstagedrc.js  Dockerfile  jest.config.js  package.json  tsconfig.json
apps/web/.storybook/: main.js
apps/web/src/api/: axios.ts
apps/web/src/pages/: _app.tsx  aboutus.tsx  contact.tsx  healthz.tsx  index.tsx  showresult.tsx  supportlist.tsx  voicerecord.tsx
deploy/manifests/: README.md  applicationset.yaml  ingress.yaml
deploy/manifests/argo/: kustomization.yaml  minio-artifact-secret.yaml  namespace.yaml  virtual-service.yaml
deploy/manifests/argocd/: README.md  application.yaml  kustomization.yaml  namespace.yaml  virtual-service.yaml
deploy/manifests/cert-manager/: Chart.yaml  README.md  helm-template.yaml  issuer.yaml  kustomization.yaml  prod-issuer.yaml  values.yaml
deploy/manifests/istio/: README.md  applicationset.yaml  prometheus.yaml
deploy/manifests/kiali/: README.md  kiali-cr.yaml
deploy/manifests/kubeflow/: README.md
deploy/manifests/mariadb/: README.md  kustomization.yaml  namespace.yaml  values.yaml
deploy/manifests/minio/: README.md  kustomization.yaml  values.yaml
deploy/manifests/mlflow/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  virtual-service.yaml
deploy/manifests/nginx/: README.md  values.yaml
deploy/mlflow/: docker-entrypoint.sh
deploy/terraform/: .terraform.lock.hcl  README.md  dataset-gs.tf  main.tf  memstore-redis.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform/k8s-config/: main.tf  nginx.conf  nginx.tf  variables.tf  website.tf
deploy/terraform/kubeip/: address.tf  iam.tf  kubeip.tf  main.tf  outputs.tf  variables.tf
notebooks/: Reinforcement_learning.ipynb
scripts/: run_poetry.py  run_python_jobs.py
(+186 files in other folders)
