[tool.poetry]
name = "fingerprinter"
version = "0.1.0"
description = ""
authors = ["vohoanglong0107 <mamlong34@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.1.3"
loguru = "^0.6.0"
tensorflow = "^2.10.0"
mlflow = "^2.0.1"
kapre = "^0.3.7"
pymysql = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fingerprinter = "app.main:cli"
