[tool.poetry]
name = "songs-uploader"
version = "0.1.0"
description = ""
authors = ["vohoanglong0107 <mamlong34@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pydub = "^0.25.1"
google-cloud-storage = "^2.6.0"
flask = {version = "^2.2.2", extras = ["dotenv"]}
loguru = "0.6.0"
flask-cors = "3.0.10"
flask-sqlalchemy = "^3.0.2"
flask-migrate = "^4.0.0"
Flask-Caching = "^2.0.0"
redis = "^4.4.0"
pymysql = "^1.0.2"
gunicorn = {version = "^20.1.0", extras = ["gevent"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
